pkg/lang/testdata/ub/calls/invalid/type-attr-data.ub
data-sources: { core.lookup.it: { type: pick() } }
